--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
+
 <app-navbar></app-navbar>
+<app-loading-bar></app-loading-bar>
 <main class="content">
   <app-menu></app-menu>
   <div class="content-container">
