--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,15 +1,14 @@
 :host {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: min-content 1fr min-content;
 }
 
 .content {
   display: grid;
   grid-template-columns: 1fr 5fr;
   padding: 1rem;
-  flex: 1 0 auto;
   max-width: var(--max-width);
   width: 100%;
 }
