--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,23 @@
-Дашбоард
+@let docs = documents();
+
+<div class="toolbar">
+  @if (docs.length) {
+  <button mat-icon-button (click)="refresh()">
+    <mat-icon>refresh</mat-icon>
+  </button>
+  }
+</div>
+
+<app-dashboard-table
+  [documents]="docs"
+  [class.display-none]="!docs?.length"
+></app-dashboard-table>
+@if (!docs.length) {
+<div class="empty">
+  <h2>Ещё нет документов</h2>
+  <button mat-flat-button color="primary" [disabled]="isLoading()" (click)="addDocument()">
+    <mat-icon>add</mat-icon>
+    Добавить документ
+  </button>
+</div>
+}
