--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -6,16 +6,10 @@
 }
 
 .content {
-  display: grid;
-  grid-template-columns: 1fr 5fr;
   padding: 1rem;
+  margin: 0 auto;
   max-width: var(--max-width);
   width: 100%;
-}
-
-.content-container {
-  margin-left: 40px;
-  padding-top: 8px;
   display: grid;
   grid-template-columns: 0 1fr;
   grid-template-rows: 100%;
