--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,5 +1,3 @@
-<mat-toolbar color="accent">
-  <div class="footer-content">
-    <span>© 2025 Моя компания</span>
-  </div>
-</mat-toolbar>
+<div class="footer">
+  <span>© 2025 Моя компания</span>
+</div>
