--- a/frontend/src/app/pages/dashboard/dashboard.component.scss
+++ b/frontend/src/app/pages/dashboard/dashboard.component.scss
@@ -1,6 +1,23 @@
-.footer {
-  justify-content: center;
+:host {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  height: 100%;
 }
-mat-toolbar {
-  margin-top: auto;
+
+.toolbar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  grid-column: span 2;
+}
+
+.empty {
+  grid-column: span 2;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
 }
