--- a/frontend/src/styles/material.scss
+++ b/frontend/src/styles/material.scss
@@ -15,6 +15,8 @@ body {
   background: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
   color-scheme: light;
+
+  --mat-dialog-container-max-width: 100vw;
 }
 
 body.dark {
