--- a/frontend/src/app/pages/dashboard/dashboard.component.scss
+++ b/frontend/src/app/pages/dashboard/dashboard.component.scss
@@ -2,13 +2,14 @@
   display: grid;
   grid-template-rows: auto 1fr;
   grid-template-columns: 1fr 1fr;
+  gap: 12px 40px;
   width: 100%;
   height: 100%;
 }
 
 .toolbar {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   grid-column: span 2;
 }
