--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -13,15 +13,22 @@
   </mat-form-field>
 
   @if (docs.length) {
-  <button mat-icon-button (click)="refresh()" class="primary">
-    <mat-icon>refresh</mat-icon>
-  </button>
+  <div>
+    <button mat-icon-button (click)="refresh()" class="primary">
+      <mat-icon>refresh</mat-icon>
+    </button>
+    <button mat-icon-button (click)="addDocument()" class="primary">
+      <mat-icon>add</mat-icon>
+    </button>
+  </div>
   }
 </div>
 
 <app-dashboard-table
+  class="mat-card"
   [class.display-none]="!docs?.length"
   [documents]="docs"
+  (rowSelected)="selectDocument($event)"
   [filter]="filter()"
 ></app-dashboard-table>
 
@@ -38,5 +45,11 @@
     Добавить документ
   </button>
 </div>
+} @let selectedDocument = selectedDoc(); @if (selectedDocument) {
+<app-dashboard-card
+  class="mat-card"
+  [doc]="selectedDocument"
+></app-dashboard-card>
+} @else {
+<span class="empty">Выберите документ из списка слева</span>
 }
-<app-dashboard-card></app-dashboard-card>
