--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -14,3 +14,8 @@
   grid-template-columns: 0 1fr;
   grid-template-rows: 100%;
 }
+
+.content-without-padding {
+  padding: 0;
+  max-width: 100%;
+}
