--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,3 +1,4 @@
 <div class="footer">
-  <span>© 2025 Моя компания</span>
+  <img ngSrc="images/logo.png" width="80" height="80" priority />
+  <span>© команда PM x FE</span>
 </div>
