--- a/frontend/src/app/pages/dashboard/dashboard.component.scss
+++ b/frontend/src/app/pages/dashboard/dashboard.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: grid;
   grid-template-rows: auto 1fr;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   gap: 12px 40px;
   width: 100%;
   height: 100%;
@@ -14,11 +14,15 @@
   grid-column: span 2;
 }
 
-.empty {
-  grid-column: span 2;
+.empty,
+.empty-full {
   display: flex;
   flex-direction: column;
   gap: 30px;
   align-items: center;
   justify-content: center;
+}
+
+.empty-full {
+  grid-column: span 2;
 }
