--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -22,3 +22,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .display-none {
   display: none;
 }
+
+.pointer {
+  cursor: pointer;
+}
